cloud-controller-manager.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: cloud-controller-manager
  name: cloud-controller-manager
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: cloud-controller-manager
  template:
    metadata:
      labels:
        k8s-app: cloud-controller-manager
    spec:
      serviceAccountName: cloud-controller-manager
      containers:
      - name: cloud-controller-manager
        image: leo36747/cloud-controller-manager:latest
        command:
        - /cloud-controller-manager
        - --cloud-provider=gce
        - --leader-elect=true
        - --allocate-node-cidrs=true
        - --cluster-cidr=10.42.0.0/16
        - --cloud-config=/gce-conf/gce.conf
        volumeMounts:
        - mountPath: /gce-conf
          name: cfgmap-volume
      volumes:
        - name: cfgmap-volume
          configMap:
            name: cloud-controller-manager-config
            items:
              - key: gce.conf
                path: gce.conf
      tolerations:
      - key: node.cloudprovider.kubernetes.io/uninitialized
        value: "true"
        effect: NoSchedule
      - key: CriticalAddonsOnly
        value: "true"
        effect: NoExecute
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      - key: node.kubernetes.io/network-unavailable
        effect: NoSchedule
      nodeSelector:
        node-role.kubernetes.io/master: "true"
