cluster-autoscaler.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cluster-autoscaler
  namespace: kube-system
  labels:
    app: cluster-autoscaler
spec:
  selector:
    matchLabels:
      app: cluster-autoscaler
  template:
    metadata:
      labels:
        app: cluster-autoscaler
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8085'
    spec:
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        fsGroup: 65534
      serviceAccountName: cluster-autoscaler
      containers:
        - image: k8s.gcr.io/autoscaling/cluster-autoscaler:v1.22.2
          name: cluster-autoscaler
          resources:
            limits:
              cpu: 100m
              memory: 600Mi
            requests:
              cpu: 100m
              memory: 600Mi
          command:
            - ./cluster-autoscaler
            - --v=2
            - --stderrthreshold=info
            - --cloud-provider=gce
            - --skip-nodes-with-local-storage=false
            - --expander=least-waste
            - --node-group-auto-discovery=mig:namePrefix=sdtd-k3s-workers,min=0,max=4
            - --regional
            - --scale-down-delay-after-add=2m
            - --scale-down-unneeded-time=2m
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      tolerations:
      - key: CriticalAddonsOnly
        value: "true"
        effect: NoExecute
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
