traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-exporter-svc
  namespace: traefik
spec:
  clusterIP: None
  ports:
    - name: '9100'
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    app.kubernetes.io/name: traefik
