longhorn-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: authsecret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.sdtd.marche.ovh`)
      kind: Rule
      middlewares:
        - name: test-auth
          namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
